# opendnssec-svn

./: KNOWN_ISSUES  Makefile.am  NEWS  auditor-0.0.1.tar.gz.md5  configure.ac  libsofthsm-1.0.0-RC1.tar.gz.md5  libsofthsm-1.0.0-RC2.tar.gz.md5  version.m4
auditor/: Makefile.am
conf/: Makefile.am  addns.rnc  addns.xml.in  addnsconf.rnc  addnsconf.xml.in  conf.rnc  conf.xml.in  kasp.rnc  kasp.xml.in  signconf.rnc  signconf.xml.in  zonelist.rnc  zonelist.xml.in
enforcer/: Makefile.am
enforcer-ng/src/: ods-enforcerd.c
enforcer-ng/src/daemon/: engine.c  engine.h
enforcer-ng/src/enforcer/: enforcer.cpp  enforcerdata.h  enforcerzone.cpp  enforcerzone.h
enforcer-ng/src/keystate/: keystate.proto
enforcer-ng/src/policy/: kasp.proto
enforcer-ng/src/signconf/: signconf.proto  signconf_task.cpp
enforcer-ng/src/xmlext-pb/test/: main.cpp
enforcer/enforcerd/: enforcer.c
enforcer/utils/: ksmutil.c
hsmbully/: Makefile.am
libhsm/checks/: hsmcheck.c
libhsm/src/: libhsm.c
libhsm/src/lib/: Makefile.am  libhsm.c  libhsm.h  pin.c  pin.h
libksm/: Makefile.am
m4/: opendnssec_common.m4
plugins/eppclient/m4/: acx_libcurl.m4
plugins/eppclient/src/: eppclientd.c
signer/: Makefile.am  README  configure.ac
signer/doc/: Changelog
signer/m4/: acx_libhsm.m4
signer/src/: Makefile.am  ods-signer.c  ods-signerd.c
signer/src/adapter/: adapi.c  adapi.h  adapter.c  adapter.h  addns.c  addns.h  addummy.c  addummy.h  adfile.c  adfile.h  adutil.h
signer/src/daemon/: cfg.c  cfg.h  cmdhandler.c  config.c  dnshandler.c  dnshandler.h  engine.c  engine.h  signal.c  worker.c  worker.h  xfrhandler.c  xfrhandler.h
signer/src/parser/: addnsparser.c  addnsparser.h  confparser.c  confparser.h  signconfparser.c  signconfparser.h  zonelistparser.c  zonelistparser.h
signer/src/scheduler/: locks.c  task.c  task.h
signer/src/shared/: allocator.c  allocator.h  file.c  hsm.c  status.c  status.h  util.c  util.h
signer/src/signer/: denial.c  denial.h  domain.c  domain.h  hsm.c  ixfr.c  ixfr.h  journal.c  journal.h  keys.c  keys.h  namedb.c  namedb.h  nsec3params.c  nsec3params.h  rrset.c  rrset.h  rrsigs.h  se_key.h  signconf.c  signconf.h  stats.h  tools.c  tools.h  zone.c  zone.h  zonedata.c  zonedata.h  zonelist.c  zonelist.h
signer/src/tools/: quicksorter_encode.c  quicksorter_encode.h  sorter.c  tools.h  zone_fetcher.c  zone_fetcher.h
signer/src/util/: duration.c  duration.h  file.c  log.c  privdrop.c  se_malloc.c  tools.c  tools.h  util.c  util.h
signer/src/wire/: acl.c  acl.h  axfr.c  axfr.h  buffer.c  buffer.h  listener.c  listener.h  netio.c  netio.h  notify.c  notify.h  query.c  query.h  sock.c  sock.h  tcpset.c  tcpset.h  tsig-openssl.c  tsig.c  tsig.h  xfrd.c  xfrd.h
test/hudson/: Makefile  config.xml
test/hudson/jobs/OpenDNSSEC/: config.xml
test/scripts/: build_and_test  build_and_test.sh  check_zones_exist  softhsm.conf
test/tools/: Makefile  hudson.sh
tools/: ods-control.in
v2/signer/: Makefile.in  README
v2/signer/man/: Makefile.in
v2/signer/src/: Makefile.am  Makefile.in  ods-signer.c  ods-signerd.c
v2/signer/src/adapter/: adapter.c  adapter.h
v2/signer/src/daemon/: cfg.c  cfg.h  cmdhandler.c  cmdhandler.h  engine.c  engine.h  signal.c  signal.h  worker.c  worker.h
v2/signer/src/parser/: confparser.c  confparser.h  signconfparser.c  signconfparser.h  zonelistparser.c  zonelistparser.h
v2/signer/src/scheduler/: schedule.c  schedule.h  task.c  task.h
v2/signer/src/shared/: duration.c  duration.h  file.c  file.h  locks.c  locks.h  privdrop.c  privdrop.h  status.c  status.h  util.c  util.h
v2/signer/src/signer/: keys.c  keys.h  signconf.c  signconf.h  zone.c  zone.h  zonelist.c  zonelist.h
xml/: Makefile.am
